--- a/index.ipynb
+++ b/index.ipynb
@@ -40,11 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = sqlite3.connect('data.sqlite', detect_types=sqlite3.PARSE_COLNAMES)\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -57,11 +62,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0          1\n",
+       "0  Julie   Firrelli\n",
+       "1  Steve  Patterson"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "\n",
+    "c.execute(\"\"\"select firstName, lastName from employees\n",
+    "                        join offices\n",
+    "                        using (officeCode) WHERE city = 'Boston';\n",
+    "                       \"\"\")\n",
+    "\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.head()"
    ]
   },
   {
@@ -74,11 +139,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Boston', 2),\n",
+       " ('London', 2),\n",
+       " ('NYC', 2),\n",
+       " ('Paris', 5),\n",
+       " ('San Francisco', 6),\n",
+       " ('Sydney', 4),\n",
+       " ('Tokyo', 2)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select city, count(employeeNumber) from offices\n",
+    "                        left join employees\n",
+    "                        on offices.officeCode = employees.officeCode\n",
+    "                        group by 1;\n",
+    "                       \"\"\").fetchall()\n",
+    "\n",
+    "# df = pd.DataFrame(c.fetchall())\n",
+    "# # print(len(df))\n",
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0\n",
+       "0  1\n",
+       "1  2\n",
+       "2  3\n",
+       "3  4\n",
+       "4  5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# c.execute(\"\"\"select officeCode from employees;\"\"\").fetchall()\n",
+    "# df = pd.DataFrame(c.fetchall())\n",
+    "# df.head()\n",
+    "\n",
+    "c.execute(\"\"\"select officeCode from offices;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.head()"
    ]
   },
   {
@@ -90,25 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answers will vary"
+    "# Answers will vary\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +302,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2996\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>1958 Setra Bus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>1940 Ford Pickup Truck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>1939 Cadillac Limousine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>1996 Peterbilt 379 Stake Bed with Outrigger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>1968 Ford Mustang</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0         1                                            2\n",
+       "0  Leslie  Jennings                               1958 Setra Bus\n",
+       "1  Leslie  Jennings                       1940 Ford Pickup Truck\n",
+       "2  Leslie  Jennings                      1939 Cadillac Limousine\n",
+       "3  Leslie  Jennings  1996 Peterbilt 379 Stake Bed with Outrigger\n",
+       "4  Leslie  Jennings                            1968 Ford Mustang"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "c.execute('''SELECT firstName, lastName, productName from employees \n",
+    "                                        join customers\n",
+    "                                        on employees.employeeNumber = \n",
+    "                                        customers.salesRepEmployeeNumber\n",
+    "                                        join orders\n",
+    "                                        on customers.customerNumber =\n",
+    "                                        orders.customerNumber\n",
+    "                                        join orderdetails\n",
+    "                                        on orders.orderNumber =\n",
+    "                                        orderdetails.orderNumber\n",
+    "                                        join products on \n",
+    "                                        orderdetails.productCode = \n",
+    "                                        products.productCode\n",
+    "                                        ''')\n",
+    "\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "print(len(df))\n",
+    "df.head()"
    ]
   },
   {
@@ -149,11 +418,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Andy</td>\n",
+       "      <td>Fixter</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Foon Yue</td>\n",
+       "      <td>Tseng</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>George</td>\n",
+       "      <td>Vanauf</td>\n",
+       "      <td>211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>Hernandez</td>\n",
+       "      <td>396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Larry</td>\n",
+       "      <td>Bott</td>\n",
+       "      <td>236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Thompson</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Loui</td>\n",
+       "      <td>Bondur</td>\n",
+       "      <td>177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Mami</td>\n",
+       "      <td>Nishi</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Martin</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Pamela</td>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Marsh</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0          1    2\n",
+       "0       Andy     Fixter  185\n",
+       "1      Barry      Jones  220\n",
+       "2   Foon Yue      Tseng  142\n",
+       "3     George     Vanauf  211\n",
+       "4     Gerard  Hernandez  396\n",
+       "5      Julie   Firrelli  124\n",
+       "6      Larry       Bott  236\n",
+       "7     Leslie   Jennings  331\n",
+       "8     Leslie   Thompson  114\n",
+       "9       Loui     Bondur  177\n",
+       "10      Mami      Nishi  137\n",
+       "11    Martin     Gerard  114\n",
+       "12    Pamela   Castillo  272\n",
+       "13     Peter      Marsh  185\n",
+       "14     Steve  Patterson  152"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "c.execute('''SELECT firstName, lastName, count(productName) from employees \n",
+    "                                        join customers\n",
+    "                                        on employees.employeeNumber = \n",
+    "                                        customers.salesRepEmployeeNumber\n",
+    "                                        join orders\n",
+    "                                        on customers.customerNumber =\n",
+    "                                        orders.customerNumber\n",
+    "                                        join orderdetails\n",
+    "                                        on orders.orderNumber =\n",
+    "                                        orderdetails.orderNumber\n",
+    "                                        join products on \n",
+    "                                        orderdetails.productCode = \n",
+    "                                        products.productCode group by 1,2\n",
+    "                                        ''')\n",
+    "\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "print(len(df))\n",
+    "df"
    ]
   },
   {
@@ -187,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
